# itconf-2021-poetry

./: Dockerfile  Makefile  README.rst  main.py  pyproject.toml
.github/workflows/: codeql-analysis.yml
itconf_2021_poetry/: __init__.py
tests/: test_itconf_2021_poetry.py
